force-app/main/default/objects/RetailStore/RetailStore.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>