force-app/main/default/objects/RetailStore/fields/Is_Locked_For_Approval__c.field-meta.xml
<CustomField>
    <fullName>Is_Locked_For_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To lock the record one&apos;s it is submitted for initial approval</description>
    <label>Is Locked For Approval</label>
    <type>Checkbox</type>
</CustomField>