force-app/main/default/objects/RetailStore/fields/Orl_Active__c.field-meta.xml
<CustomField>
    <fullName>Orl_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>