force-app/main/default/objects/RetailStore/fields/Orl_Description__c.field-meta.xml
<CustomField>
    <fullName>Orl_Description__c</fullName>
    <inlineHelpText>Please Enter The Reason For Rejection.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>