force-app/main/default/objects/RetailStore/fields/Orl_Email__c.field-meta.xml
<CustomField>
    <fullName>Orl_Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>