force-app/main/default/objects/RetailStore/fields/Orl_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Orl_Mobile_Number__c</fullName>
    <label>Mobile Number</label>
    <type>Phone</type>
</CustomField>