force-app/main/default/objects/RetailStore/fields/Orl_Status__c.field-meta.xml
<CustomField>
    <fullName>Orl_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Approve - Sales</fullName>
            </value>
            <value>
                <fullName>Reject - Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>