force-app/main/default/objects/RetailStore/validationRules/Orl_Validation_check_for_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Orl_Validation_check_for_Description</fullName>
    <active>true</active>
    <errorConditionFormula>IF(  OR(  ISPICKVAL(Orl_Status__c, &quot;Reject - Sales&quot;) 
        ,ISPICKVAL(Orl_Status__c, &quot;Reject - Distributor&quot;)) 

, ISBLANK( Description ) ,false)</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>Please add the reason for rejection in description field.</errorMessage>
</ValidationRule>