force-app/main/default/objects/RetailStore/validationRules/Record_is_locked_for_approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_is_locked_for_approval</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Is_Locked_For_Approval__c , PRIORVALUE( Is_Locked_For_Approval__c )  = FALSE)</errorConditionFormula>
    <errorMessage>This record is locked for approval and cannot be edited until any action is peformed.</errorMessage>
</ValidationRule>