force-app/main/default/objects/RetailStore/listViews/All_RetailStore.listView-meta.xml
<ListView>
    <fullName>All_RetailStore</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>RetailLocationGroup</columns>
    <columns>STREET</columns>
    <columns>Orl_Status__c</columns>
    <columns>StoreType</columns>
    <columns>CITY</columns>
    <columns>COUNTRY</columns>
    <columns>DeliveryMethod</columns>
    <columns>DeliveryFrequency</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>